src/objects/IPM_Project__c.object
<CustomObject>
    <fields>
        <fullName>IPM_Project_Job_Status__c</fullName>
        <description>To store the status of the project job.</description>
        <label>Project Job Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible For Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related user in this case the project leader.</description>
        <label>Project Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Logo_Id__c</fullName>
        <description>To capture the project logo id.</description>
        <label>IPM Project Logo Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Logo__c</fullName>
        <description>To capture the logo of the project.</description>
        <label>Project Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Name__c</fullName>
        <description>To store the name of the project.</description>
        <externalId>true</externalId>
        <inlineHelpText>Project Name is mandatory</inlineHelpText>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IPM_Project_Name_isNull__c</fullName>
        <description>This field will advice is IPM_Project_Name__c is null or not</description>
        <formula>IF( ISBLANK( IPM_Project_Name__c ) , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will advice is Project Name is null or not</inlineHelpText>
        <label>IPM_Project_Name_isNull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Navigate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To navigate the project.</description>
        <label>Project Navigate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Rollout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related rollout project.</description>
        <label>IPM Source Rollout</label>
        <referenceTo>IPM_Project_Rollout__c</referenceTo>
        <relationshipLabel>IPM Projects</relationshipLabel>
        <relationshipName>IPM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Start_Date__c</fullName>
        <description>This field holds the project start date for migrated projects.</description>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Stopped_By__c</fullName>
        <description>Project Stopped By -</description>
        <label>Project Stopped By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related project template.</description>
        <label>IPM Project Template</label>
        <referenceTo>IPM_Project_Template__c</referenceTo>
        <relationshipLabel>IPM Projects</relationshipLabel>
        <relationshipName>IPM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Project_To_Be_Stopped_Date__c</fullName>
        <description>To be used to display time in email template</description>
        <formula>DATEVALUE(IPM_Stopped_Date_Time__c)  + 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Project To Be Stopped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Type__c</fullName>
        <description>To capture the type of project.</description>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Original</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Y3iTO__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Y3iTO</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Quit_Project_Tab__c</fullName>
        <description>To keep track if the user quits the project.</description>
        <label>Quit Project Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_ReactivationDateTime__c</fullName>
        <description>To store the reactivation date and time without day light saving issur</description>
        <label>Reactivation Date/Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Region_Shr__c</fullName>
        <description>To capture the region of the project.</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Region__c</fullName>
        <description>To capture the region of the project.</description>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_RolloutStatus__c</fullName>
        <description>To capture the status of the rollout.</description>
        <formula>Text(IPM_Project_Rollout__r.IPM_Regional_Rollout_Status__c)</formula>
        <label>IPM_RolloutStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Rollout_Added_at_Stage__c</fullName>
        <description>It will keep track of Rollout phase at the time of rollout creation</description>
        <label>IPM_Rollout_Added_at_Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Rollout_Status__c</fullName>
        <description>To capture the status of the rollout.</description>
        <label>Rollout Status</label>
        <picklist>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_STOP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the project is in the stopped state.</description>
        <label>STOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Sector__c</fullName>
        <description>To store the sector of the project.</description>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Cleaning Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disinfectants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Dishwash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Surface Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine Dishwash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist Cleaners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Selected_Project_Type__c</fullName>
        <description>To store the type of the selected project.</description>
        <label>Selected Project Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_ShowProjectStop__c</fullName>
        <formula>NOT(OR(Text(IPM_Project_Type__c) == &apos;Operational&apos;,Text(IPMProject_Span__c) ==&apos;Local&apos;,Is_Archieved__c,IPM_PrepareForArchival__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Show Stop Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_SourceProjectType__c</fullName>
        <description>To capture the Source Project Type.</description>
        <label>Source Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Original</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Stop_Child_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is true then all child projects will be stopped.</description>
        <label>IPM Stop Child Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_StoppedByProjectPhase__c</fullName>
        <label>Stopped By Project Phase</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_StoppedByProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stopped By Project</label>
        <referenceTo>IPM_Project__c</referenceTo>
        <relationshipLabel>IPM Projects (Stopped Project)</relationshipLabel>
        <relationshipName>IPM_StoppedProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_StoppedByUser__c</fullName>
        <formula>IPM_Stopped_By__r.FirstName + &apos; &apos; +  IPM_Stopped_By__r.LastName</formula>
        <label>Stopped By User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Stopped_At_Span__c</fullName>
        <label>IPM Stopped At Span</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Stopped_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When the project is stopped, it notes who has actually stopped it last.</description>
        <label>Stopped By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Stopped_Comments__c</fullName>
        <description>To capture the comments for a stopped project.</description>
        <label>IPM Stopped Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Stopped_Date_Time__c</fullName>
        <description>When the project is stopped, it notes the date and time it stopped.</description>
        <label>Stopped Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPM_Stopped_Phase__c</fullName>
        <description>Phase at which the project was stopped.</description>
        <label>Stopped Phase</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Strategic_Intent__c</fullName>
        <description>To store the Strategic Intent value.</description>
        <label>IPM Strategic Intent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Sub_Category__c</fullName>
        <description>To capture the sub category.</description>
        <label>Sub Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Sub_sector__c</fullName>
        <description>To capture the sub sector.</description>
        <label>Sub sector</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Date__c</fullName>
        <description>The target launch date of the project.</description>
        <label>Target Launch Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Dates__c</fullName>
        <description>To capture the target launch date of the project.</description>
        <label>IPM Target Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Month__c</fullName>
        <description>The target launch month of the project.</description>
        <formula>CASE(MONTH(IPM_Target_Launch_Dates__c),

1, &quot;January&quot;,

2, &quot;February&quot;,

3, &quot;March&quot;,

4, &quot;April&quot;,

5, &quot;May&quot;,

6, &quot;June&quot;,

7, &quot;July&quot;,

8, &quot;August&quot;,

9, &quot;September&quot;,

10, &quot;October&quot;,

11, &quot;November&quot;,

12, &quot;December&quot;,

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Launch Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Period__c</fullName>
        <description>The target launch period of the project.</description>
        <formula>IPM_Bosscard__r.IPM_Target_Launch_Date__c</formula>
        <label>Target Launch Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Year__c</fullName>
        <description>The target launch year of the project.</description>
        <formula>TEXT(YEAR( IPM_Target_Launch_Dates__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Launch Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Technical_Project_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to related user in this case the Technical Project Leader.</description>
        <label>Technical Project Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Temporary_Phase__c</fullName>
        <description>To capture the temporary phase of the project.</description>
        <label>Temporary Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Threshold_Status__c</fullName>
        <formula>IF(Exempt_from_Threshold__c,&apos;Exempt&apos;, IF(OR(ISBLANK(IPM_Cluster__c ),ISNULL(IPM_Cluster__c )),  IF(IPM_Category_Thresh__c &lt; IPM_Project_Y3iTO__c , &apos;Above Threshold&apos;,&apos;Below Threshold&apos;) , IF(IPM_Category_Thresh__c &lt;  IPM_Cluster__r.IPM_Sum_Y3iTO__c , &apos;Above Threshold&apos;,&apos;Below Threshold&apos; )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Threshold Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Threshold_Value__c</fullName>
        <description>To store the Threshold value</description>
        <label>Threshold Value</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Trigger_Time_05__c</fullName>
        <description>To store the trigger time value.</description>
        <formula>(Now()  -  0.04100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Time 05</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPM_UserCategory__c</fullName>
        <description>Category  will be auto populated from user record.</description>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_White_Space_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To select the project as a white space project.</description>
        <label>IPM White Space Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFinanceMemberNull__c</fullName>
        <description>To check if the finance member is present or not for the project.</description>
        <formula>ISNULL(IPM_Finance_Lead__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsFinanceMemberNull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Archieved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO indicate if the IPM NG Project Is Archieved</description>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Last Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ManualCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check for Manual Checks.</description>
        <label>ManualCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Cluster_Name__c</fullName>
        <description>To capture the name of the master cluster.</description>
        <label>Market Cluster Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Cluster__c</fullName>
        <description>To capture the master cluster.</description>
        <label>Market Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MisAligned_Confirmed_By_Finance_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MisAligned TLD Confirmed By Finance Leader</description>
        <label>MisAligned Confirmed By Finance Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Planned_Global_Contract_Date__c</fullName>
        <description>To capture the parent planned charter document date.</description>
        <formula>IPM_Parent_Project__r.Planned_Global_Contract_Date__c</formula>
        <label>Parent Planned Global Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Global_Contract_Date__c</fullName>
        <description>Global Project Contract Gate Milestone Due Date</description>
        <label>Planned Global Contract Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Type_of_gate__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Previous_Target_Launch_Date__c</fullName>
        <description>To capture the previous target launch date of the project.</description>
        <label>Previous Target Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Countries__c</fullName>
        <description>To capture the countries related to the project.</description>
        <label>Project Countries</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_External_ID__c</fullName>
        <description>External ID for the project.</description>
        <externalId>true</externalId>
        <label>Project External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Members__c</fullName>
        <description>To capture the members of the project.</description>
        <label>Project Members</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RQS_Charter_Answered_3__c</fullName>
        <label>RQS Charter Answered &gt; 3</label>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.IPM_Active_RQS__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.IPM_Charter_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>RQS Questionnaire</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Questionnaire__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RQS_Charter_Answered__c</fullName>
        <label>RQS Charter Answered</label>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.IPM_Charter_Score__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.IPM_Active_RQS__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>RQS Questionnaire</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Questionnaire__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RQS_Contract_Answered_3__c</fullName>
        <label>RQS Contract Answered &gt; 3</label>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.IPM_Active_RQS__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.IPM_Contract_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>RQS Questionnaire, Corporate Risk</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Questionnaire__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RQS_Contract_Answered__c</fullName>
        <label>RQS Contract Answered</label>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.IPM_Contract_Score__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.IPM_Active_RQS__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Questionnaire__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Corporate Risk</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Questionnaire__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Regional_Project_Leader_Name__c</fullName>
        <description>To capture the name of the regional project leader.</description>
        <formula>IPM_Parent_Project__r.IPM_Project_Leader__r.FirstName + &quot;  &quot; + IPM_Parent_Project__r.IPM_Project_Leader__r.LastName</formula>
        <label>Regional Project Leader Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollout_Plan_Target_Launch_Date__c</fullName>
        <description>To store rollout plan target launch date</description>
        <label>Rollout Plan Target Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_to_Trade_Milestone_Due_Date__c</fullName>
        <description>To capture the due date of the ship to trade milestone.</description>
        <label>Ship to Trade Milestone Due Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.Name</field>
            <operation>contains</operation>
            <value>Target Launch Date(Ship to Trade)</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Source_Rollout_External_Id__c</fullName>
        <description>External Id of Source rollout</description>
        <formula>IF( AND( NOT( ISBLANK(IPM_Project_Rollout__c) ), NOT(ISNULL(IPM_Project_Rollout__c)) ) , IPM_Project_Rollout__r.IPM_Rollout_Project__c, IPM_Project_Name__c )</formula>
        <label>IPM Source Rollout External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Timestamp_EcoDesign__c</fullName>
        <description>When the project is synced with ecodesign sucessfully, it notes the date and time.</description>
        <label>Success Timestamp EcoDesign</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sustainability_Period_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the change in number of Innovation years for the project</description>
        <label>Sustainability Period Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sustainability_Period__c</fullName>
        <description>Defines the number of Innovation years for the project</description>
        <inlineHelpText>Defines the number of Innovation years for the project</inlineHelpText>
        <label>Sustainability Period</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upcoming_Milestone_Due_Date__c</fullName>
        <description>To store the due date of the upcoming milestone.</description>
        <label>Upcoming Milestone Due Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Planned_Date__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Type_of_Milestone__c</field>
            <operation>equals</operation>
            <value>Standard</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Update_BET__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if BET is updated.</description>
        <label>Update BET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>update_on_change_of_ms_first_release_dat__c</fullName>
        <description>To update on change of ms first release date.</description>
        <label>update on change of ms first release dat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IPM Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Project_External_ID__c</columns>
        <columns>IPMProject_Span__c</columns>
        <columns>IPM_Project_Type__c</columns>
        <columns>IPM_ProjectSubType__c</columns>
        <columns>IPM_Company_Card__c</columns>
        <columns>IPM_Target_Launch_Dates__c</columns>
        <columns>IPM_Project_Leader__c</columns>
        <columns>IPM_SourceProjectType__c</columns>
        <columns>IPM_CompanyCardText__c</columns>
        <columns>IPM_UserCategory__c</columns>
        <columns>IPM_Market__c</columns>
        <columns>IPM_Sub_sector__c</columns>
        <columns>IPM_Brand_Positioning__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_External_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Finder</fullName>
        <columns>NAME</columns>
        <columns>IPM_Project_Description__c</columns>
        <columns>Project_External_ID__c</columns>
        <columns>IPM_Project_Name__c</columns>
        <columns>IPM_Phase__c</columns>
        <columns>Sustainability_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IPM_Phase__c</field>
            <operation>equals</operation>
            <value>Feasibility,Ideas</value>
        </filters>
        <filters>
            <field>IPMProject_Span__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Finder</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finder_Local_Projects</fullName>
        <columns>NAME</columns>
        <columns>IPM_Project_Description__c</columns>
        <columns>Project_External_ID__c</columns>
        <columns>IPM_Project_Name__c</columns>
        <columns>Sustainability_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IPM_Project_Leader__c</field>
            <operation>contains</operation>
            <value>Samrat</value>
        </filters>
        <filters>
            <field>IPMProject_Span__c</field>
            <operation>equals</operation>
            <value>Local</value>
        </filters>
        <label>Finder Local Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IPM_ALMATI_CANCUN_IPM_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_ALMATI CANCUN</label>
        <queue>IPM_ALMATI_CANCUN</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_LIQUID_MDM_W2_SEAA_IPM_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_LIQUID MDM W2_SEAA</label>
        <queue>IPM_LIQUID_MDM_W2_SEAA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GqFa_IPM_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000GqFa</label>
        <queue>IPM_a7I0L000000GqFa</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GqFk_IPM_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000GqFk</label>
        <queue>IPM_a7I0L000000GqFk</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Gr3E_IPM_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Gr3E</label>
        <queue>IPM_a7I0L000000Gr3E</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Gr3U_IPM_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Gr3U</label>
        <queue>IPM_a7I0L000000Gr3U</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GrZl_IPM_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_DUMMY1</label>
        <queue>IPM_a7I0L000000GrZl</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GrZq_IPM_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_BIG BANG EU _EU</label>
        <queue>IPM_a7I0L000000GrZq</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>